# tofufy

./: .gitignore  README.md  pyproject.toml
src/tofufy/: cli.py
